# simple_raytracer

./: CMakeLists.txt  README.md  cpp.hint
resources/: SceneRTIOW.json
src/: ConsoleApplication.cpp  ConsoleApplication.h  ConsoleApplicationDefaults.h  GUIApplication.cpp  GUIApplication.h  GUIApplicationDefaults.h  main.cpp
src/raytracer/: RaytracerConfig.h  RaytracerInterface.h  RaytracerPerformanceInfo.h  RaytracerStage.h  RaytracerTypes.h
src/raytracer/api/: RaytracerTargetInterface.h
src/raytracer/api/null/: NullRaytracerTarget.cpp  NullRaytracerTarget.h
src/raytracer/api/opengl/: OpenGLRaytracerTarget.cpp  OpenGLRaytracerTarget.h  OpenGLUtils.h
src/raytracer/filesystem/: FileSystem.cpp  FileSystem.h
src/raytracer/filesystem/formats/: ImageFormat.cpp  ImageFormat.h  SceneFormat.cpp  SceneFormat.h
src/raytracer/math/: nmath.hpp  nmath_config.hpp  nmath_defines.hpp  nmath_extensions.hpp  nmath_func.hpp  nmath_func.inl  nmath_types.hpp  nmath_vec2.hpp  nmath_vec2.inl  nmath_vec3.hpp  nmath_vec3.inl
src/raytracer/scene/: RaytracerCamera.h  RaytracerMaterial.h  RaytracerMesh.h  RaytracerObject.h  RaytracerSceneContainer.cpp  RaytracerSceneContainer.h  RaytracerTexture.h
src/raytracer/software/: SoftwareRaytracer.cpp  SoftwareRaytracer.h
src/raytracer/software/kernel/: Kernel.cpp  Kernel.h  KernelConfig.h  KernelInternals.h  README.md  RegionConfig.h  SceneConfig.h  SoftwareKernel.h  TargetConfig.h
src/raytracer/software/kernel/objects/: FramebufferObject.h  MaterialObject.h  MeshObject.h  SceneCamera.h  SceneObject.h  SceneObjectEmpty.h  SceneObjectMesh.h  SceneObjectSphere.h  TextureObject.h
src/raytracer/software/kernel/scene/: Scene.h  SceneHierarchy.h  SceneHierarchyBVH.cpp  SceneHierarchyBVH.h  SceneHierarchyBVH_RTIOW.cpp  SceneHierarchyBVH_RTIOW.h
src/raytracer/software/kernel/utils/: AABB.h  Color.h  Random.h  RayInfo.h  SurfaceHitInfo.h  Utils.h
src/raytracer/threading/: nthreading.hpp  nthreading_pool.hpp  nthreading_pool.inl
src/raytracer/utils/: RaytracerLogger.cpp  RaytracerLogger.h
